--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     by <strong>{{ site.author.name }}</strong>
   </small> {% include social.html %} {%- assign theme_name = "portfolYOU" -%} {%- assign theme_repo = "https://github.com/YoussefRaafatNasry/portfolYOU" -%}
     <small id="attribution">
-    theme <a href="{{ theme_repo }}" target="_blank">{{ theme_name }}</a>
+    theme <a href="{{ theme_repo }}">{{ theme_name }}</a>
   </small>
 
 </footer>
