--- a/_includes/blog/post-card.html
+++ b/_includes/blog/post-card.html
@@ -1,49 +1,24 @@
-{%- comment -%} Default Styles {%- endcomment -%}
-{%- assign card_style  = '' -%}
-{%- assign text_style  = 'text-themed' -%}
-{%- assign badge_style = 'badge-dark' -%}
-
-{%- comment -%} Update Styles {%- endcomment -%}
-{%- if post.style == 'fill' -%}
-  {%- assign card_style = post.color | prepend: 'bg-' -%}
-  {%- if post.color != 'light' -%}
-    {%- assign text_style  = 'text-white' -%}
-    {%- assign badge_style = 'badge-light text-' -%}
-    {%- assign badge_style = badge_style | append: post.color -%}
-  {%- endif -%}
-{%- else -%}
-  {%- assign card_style = post.color | prepend: 'border border-' -%}
-  {%- if post.color -%}
-    {%- assign badge_style =  post.color | prepend: 'badge-' -%}
-  {%- endif -%}
-{%- endif -%}
-
-{%- comment -%} Determine Post URL {%- endcomment -%}
-{%- if post.external_url -%}
-  {%- assign post_url = post.external_url -%}
-{%- else -%}
-  {%- assign post_url = post.url | relative_url -%}
-{%- endif -%}
-    
-<div class="col-lg-6 my-3 wow animated fadeIn" data-wow-delay=".15s">
-  <a href="{{ post_url }}" class="post card {{ card_style }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>
-    <div class="card-body {{ text_style }}">
-      <h3 class="card-title">{{ post.title }}</h3>
-      <p class="card-text">
-        {% for tag in post.tags %}
-        <span class="badge {{ badge_style }}">{{ tag }}</span>
-        {% endfor %}
+<div class="wow animated fadeIn" data-wow-delay=".15s">
+  <a href="{{ post_url }}" class="post card text-themed" {%- if external and site.open_new_tab -%} target="_blank" {%- endif -%}>
+    {%- if post_img -%}
+    <img id="{{ post_id }}-img" class="card-img-top" src="{{ post_img }}" alt="{{ post_name }}" />
+    {%- endif -%}
+    <div class="card-body">
+      <h5 id="{{ post_id }}-name" class="card-title">
+          {%- if post_type == "remote" -%}
+          <i class="fab fa-github" data-toggle="tooltip" data-placement="bottom" data-delay="250" title="GitHub Repository"></i> |&nbsp;
+          {%- endif -%}
+        {{ post_name }}
+      </h5>
+      <p id="{{ post_id }}-desc" class="card-text">{{ post_desc }}</p>
+      <p id="{{ post_id }}-tools" class="card-text">
+        {%- for tool in post_tags -%}
+        <span class="badge badge-pill text-primary border border-primary ml-1">{{ tool }}</span>
+        {%- endfor -%}
       </p>
-      <p class="card-text">
-        {%- if post.description -%}
-        {{ post.description }}
-        {%- else -%}
-        {{ post.content | truncatewords: 25, "<small><i>  read more...</i></small>" }}
-        {%- endif -%}
+      <p class="card-footer {{ text_style }}">
+      {{ post_date | date_to_long_string }}
       </p>
-    </div>
-    <div class="card-footer {{ text_style }}">
-      {{ post.date | date_to_long_string }}
     </div>
   </a>
 </div>
