--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -1,26 +1,31 @@
 .search-box {
-  box-shadow: none !important;
+    box-shadow: none !important;
 }
 
 .post.card {
-  border-radius: $rounded-borders;
-  text-decoration: none !important;
-  padding: 15px;
-  height: 100%;
-
-  .card-footer {
-    font-size: 14px;
-    margin: 0 -15px -15px -15px;
-    padding: 15px 35px;
-  }
+    border-radius: $rounded-borders;
+    text-decoration: none !important;
+    margin: 10px auto;
+    .card-img-top {
+        border-radius: $rounded-borders $rounded-borders 0 0;
+    }
+    transition: transform 400ms;
+    &:hover:not(.post) {
+        transform: translateY(-8px);
+        box-shadow: -2px 8px 40px -12px rgba(0, 0, 0, 0.24);
+    }
+    .card-footer {
+      font-size: 14px;
+      margin: 0 -15px -15px -15px;
+      padding: 15px 35px;
+    }
 }
 
 .post-metadata {
-  font-size: 14px;
-  margin-top: -6px;
-
-  .tag:hover {
-    background-color: $primary;
-    color: white !important;
-  }
+    font-size: 14px;
+    margin-top: -6px;
+    .tag:hover {
+        background-color: $primary;
+        color: white !important;
+    }
 }
