--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="site24x7-domain-verification" content="0dc0bfeef5b9e969611aa048b8661fcb" />
 
   <meta property="og:type" content="website">
   <meta property="og:title" content="{{ title }}">
