--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,6 +6,16 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+body {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll; 
+}
+
+body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+
 .badge {
   font-weight: 500;
 }
