--- a/_includes/projects/project-card.html
+++ b/_includes/projects/project-card.html
@@ -6,14 +6,14 @@
     <div class="card-body">
       <h5 id="{{ project_id }}-name" class="card-title">
           {%- if project_type == "remote" -%}
-          <i class="fab fa-github" data-toggle="tooltip" data-placement="bottom" data-delay="250" title="GitHub Repository"></i> |&nbsp;
+          <i class="fab fa-github" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-delay="250" title="GitHub Repository"></i> |&nbsp;
           {%- endif -%}
         {{ project_name }}
       </h5>
       <p id="{{ project_id }}-desc" class="card-text">{{ project_desc }}</p>
       <p id="{{ project_id }}-tools" class="card-text">
         {%- for tool in project_tools -%}
-        <span class="badge badge-pill text-primary border border-primary ml-1">{{ tool }}</span>
+        <span class="badge rounded-pill text-primary border border-primary ms-1">{{ tool }}</span>
         {%- endfor -%}
       </p>
     </div>
