--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,6 @@
 $primary:   #007bff;
 $secondary: #6c757d;
-$bs-secondary-color: #6c757d;
+$bs-secondary-color: #6c757d !important;
 $success:   #28a745;
 $info:      #17a2b8;
 $warning:   #ffc107;
