--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="mt-auto py-3 text-center">
 
-    <small class="text-muted mb-2">
+    <small class="text-secondary mb-2">
     <i class="fas fa-code"></i> with <i class="fas fa-heart"></i>
     by <strong>{{ site.author.name }}</strong>
   </small> {% include social.html %}
