--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -9,3 +9,8 @@
     gtag('config', '{{ site.analytics.google.tracking_id }}');
   </script>
 {%- endif -%}
+
+{%- if jekyll.environment == 'production' and site.analytics.ahrefs.enabled == true -%}
+  <!-- Ahrefs Site Audit -->
+  <script async src="https://analytics.ahrefs.com/analytics.js" data-key="{{ site.analytics.ahrefs.ahrefs_key }}"></script>
+{%- endif -%}
